# DropOut

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: commit.agent.md
.github/instructions/: commit.instructions.md
.github/references/git/: conventional-commit.md
.github/workflows/: check.yml  codeql.yml  lint.yml  release.yml  test.yml  ui_check.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: fix-appimage.sh
src-tauri/src/: main.rs
src-tauri/src/core/: account_storage.rs  auth.rs  config.rs  downloader.rs  fabric.rs  forge.rs  game_version.rs  instance.rs  java.rs  manifest.rs  maven.rs  mod.rs  rules.rs  version_merge.rs
src-tauri/src/utils/: mod.rs  zip.rs
ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: BottomBar.svelte  CustomSelect.svelte  HomeView.svelte  InstanceCard.svelte  InstanceEditModal.svelte  InstancesView.svelte  LoginModal.svelte  ModLoaderSelector.svelte  ParticleBackground.svelte  SettingsView.svelte  Sidebar.svelte  StatusToast.svelte  VersionsView.svelte
ui/src/lib/: DownloadMonitor.svelte  GameConsole.svelte  modLoaderApi.ts
ui/src/lib/effects/: ConstellationEffect.ts  SaturnEffect.ts
ui/src/stores/: auth.svelte.ts  game.svelte.ts  instances.svelte.ts  settings.svelte.ts  ui.svelte.ts
ui/src/types/: index.ts
