[package]
name = "dropout"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.9"
serde = { version = "1.0", features = ["derive"] } 
toml = "0.5" 
log = "0.4"
env_logger = "0.9" 
glib-sys = "0.20.7"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.deb]
depends = "libgtk-3-0"
section = "games"
assets = [
    ["target/release/dropout", "usr/bin/", "755"],
]

