[package]
name = "dropout"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
toml = "0.5" 
log = "0.4"
env_logger = "0.9" 
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde_json = "1.0.149"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.deb]
depends = "libgtk-3-0"
section = "games"
assets = [
    ["target/release/dropout", "usr/bin/", "755"],
]

