[package]
name = "dropout"
version = "0.1.21"
edition = "2021"
authors = ["HsiangNianian"]
description = "The DropOut Minecraft Game Launcher"
license = "MIT"
repository = "https://github.com/HsiangNianian/DropOut"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
serde_json = "1.0.149"
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
uuid = { version = "1.10.0", features = ["v3", "v4", "serde"] }
futures = "0.3"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
zip = "2.2.2"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
serde_urlencoded = "0.7.1"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = "2.4.5"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.deb]
depends = "libgtk-3-0"
section = "games"
assets = [
    ["target/release/dropout", "usr/bin/", "755"],
]

